mautic.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: mautic
  name: mautic 
  labels:
    app: mautic 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautic 
  template:
    metadata:
      labels:
        app: mautic 
    spec:
      containers:
        - image: mautic/mautic 
          name: mautic
          ports:
            - containerPort: 80
              name: mautic
          volumeMounts:
          - name: mautic-persistent-storage
            mountPath: /var/www/html
      volumes:
      - name: mautic-persistent-storage
        persistentVolumeClaim:
          claimName: mautic-pv-claim
