mautic-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mautic 
  namespace: mautic
  name: mautic 
spec:
  type: NodePort
  ports:
    - port: 80
      # targetPort: 80
      protocol: TCP
  selector:
    app: mautic
