mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mautic
  name: mysql
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mysql
