mautic-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production" # for cert-manager
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/service-upstream: "true"
    kubernetes.io/ingress.class: nginx # for nginx-ingress-controller
    kubernetes.io/tls-acme: "false" # for kube-lego
  name: mautic-mautic.gigalixir.com
  namespace: mautic
spec:
  rules:
  - host: mautic.gigalixir.com # point dns at the right place: in my case CNAME tls.gigalixir.com
    http:
      paths:
      - backend:
          serviceName: mautic
          servicePort: 80 # must match mautic-service.yml port
        path: /
  tls:
  - hosts:
    - mautic.gigalixir.com
    secretName: mautic-mautic.gigalixir.com-tls
